--- a/Labs/module_1/Data-Cleaning/your-code/Lab_Data Cleaning.ipynb
+++ b/Labs/module_1/Data-Cleaning/your-code/Lab_Data Cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "4       5        6792   1145      662          5"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "4       5     81    23.0        NaN             3"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
        "[32057 rows x 10 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "CommentCount      3.0      45.0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1536,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,27 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/ops/array_ops.py:253: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  res_values = method(rvalues)\n"
-     ]
-    }
-   ],
-   "source": [
-    "merged_dataframes[(merged_dataframes['userId_y'].isnull()==True)]\n",
-    "#We will clean them because we can't have the values to fill them \n",
-    "merged_dataframes = merged_dataframes[merged_dataframes['userId_y'] != 'NaN']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1614,6 +1594,45 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>101</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>8198.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>101</td>\n",
+       "      <td>22</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>54</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3613.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>101</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>5224.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>6792</td>\n",
@@ -1627,56 +1646,17 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>12</td>\n",
-       "      <td>101</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>457</td>\n",
+       "      <td>114</td>\n",
+       "      <td>47</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>152</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>13</td>\n",
-       "      <td>817</td>\n",
-       "      <td>178</td>\n",
-       "      <td>44</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>16</td>\n",
-       "      <td>101</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
+       "      <td>29229.0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1690,19 +1670,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32050</th>\n",
-       "      <td>55741</td>\n",
-       "      <td>101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55741</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10619.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32052</th>\n",
@@ -1744,6 +1711,19 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>32055</th>\n",
+       "      <td>55746</td>\n",
+       "      <td>106</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55746</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20315.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>32056</th>\n",
        "      <td>55747</td>\n",
        "      <td>1</td>\n",
@@ -1758,47 +1738,71 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19011 rows × 10 columns</p>\n",
+       "<p>31285 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       userId_x  Reputation  Views  UpVotes  DownVotes  postId  Score  \\\n",
+       "0             2         101     25        3          0       2     22   \n",
+       "1             3         101     22       19          0       3     54   \n",
+       "2             4         101     11        0          0       4     13   \n",
        "3             5        6792   1145      662          5       5     81   \n",
-       "9            12         101     10        5          0      12     20   \n",
-       "10           13         817    178       44          1      13     14   \n",
-       "11           15          11      8        0          0      15     13   \n",
-       "12           16         101      4        7          0      16     16   \n",
+       "4             6         457    114       47          0       6    152   \n",
        "...         ...         ...    ...      ...        ...     ...    ...   \n",
-       "32050     55741         101      0        1          0   55741      1   \n",
        "32052     55743           1      0        0          0   55743      0   \n",
        "32053     55744           6      1        0          0   55744      1   \n",
        "32054     55745         101      0        0          0   55745      3   \n",
+       "32055     55746         106      1        0          0   55746      3   \n",
        "32056     55747           1      0        0          0   55747      0   \n",
        "\n",
        "       userId_y  ViewCount  CommentCount  \n",
+       "0          24.0     8198.0             1  \n",
+       "1          18.0     3613.0             4  \n",
+       "2          23.0     5224.0             2  \n",
        "3          23.0        NaN             3  \n",
-       "9           5.0        NaN             1  \n",
-       "10         23.0        NaN             4  \n",
-       "11          6.0        NaN             0  \n",
-       "12          8.0        NaN             3  \n",
+       "4           5.0    29229.0             5  \n",
        "...         ...        ...           ...  \n",
-       "32050   10619.0        NaN             0  \n",
        "32052   24164.0        NaN             1  \n",
        "32053   10961.0        NaN             7  \n",
        "32054    4598.0        NaN             2  \n",
+       "32055   20315.0       59.0             0  \n",
        "32056   10619.0        NaN             1  \n",
        "\n",
-       "[19011 rows x 10 columns]"
+       "[31285 rows x 10 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "merged_dataframes[(merged_dataframes['userId_y'].isnull()==True)]\n",
+    "#We will clean them because we can't have the values to fill them \n",
+    "merged_dataframes = merged_dataframes[merged_dataframes['userId_y'].notna() == True]\n",
+    "#merged_dataframes = merged_dataframes[merged_dataframes['userId_y'] != 'NaN']\n",
+    "merged_dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
     "merged_dataframes[(merged_dataframes['ViewCount'].isnull()==True)]\n",
-    "#We will clean them because we can't have the values to fill them \n"
+    "#We will clean them because we can't have the values to fill them \n",
+    "merged_dataframes = merged_dataframes[merged_dataframes['ViewCount'].notna() == True]\n",
+    "merged_dataframes\n",
+    "print('test')"
    ]
   },
   {
@@ -1810,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1833,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
